// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Feature Index page A11y I can see the skip to content link 1`] = `"Aller au contenu"`;

exports[`Canonical Feature Index page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=3&amp;p=afrique.feature_index.48465371.page&amp;x1=[urn%3Abbc%3Acps%3A447a95b6-1c9f-e544-bf60-e23452e7fa71]&amp;x2=[responsive]&amp;x3=[news-afrique]&amp;x4=[fr]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[Tout%2520savoir%2520sur%2520la%2520CAN%25202019%2520-%2520BBC%2520News%2520Afrique]&amp;x11=[2019-05-30T14%3A23%3A38.000Z]&amp;x12=[2019-07-19T12%3A46%3A18.000Z]"/>"`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Afrique",
  "url": "/afrique",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 2`] = `
{
  "text": "Pourquoi vous pouvez faire confiance à BBC News",
  "url": "https://www.bbc.com/afrique/institutionelles-49283281",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 3`] = `
{
  "text": "Conditions d'utilisation",
  "url": "https://www.bbc.com/afrique/institutionelles-36826639",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 4`] = `
{
  "text": "A propos de la BBC",
  "url": "https://www.bbc.com/afrique/institutionelles-36826641",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 5`] = `
{
  "text": "Politique de confidentialité",
  "url": "https://www.bbc.com/afrique/institutionelles-36826642",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 7`] = `
{
  "text": "Contactez la BBC",
  "url": "https://www.bbc.co.uk/afrique/send/u50853159",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 8`] = `
{
  "text": "Découvrez notre approche en matière de liens externes.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Feature Index page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/afrique"`;

exports[`Canonical Feature Index page Footer Paragraphs should match text 1`] = `"© 2024 BBC. La BBC n'est pas responsable du contenu des sites externes. Découvrez notre approche en matière de liens externes."`;

exports[`Canonical Feature Index page Header I can see the branding 1`] = `"BBC News, Afrique"`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 1`] = `
{
  "text": "Accueil",
  "url": "/afrique",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 2`] = `
{
  "text": "Afrique",
  "url": "/afrique/topics/cvqxn2k7kv7t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 3`] = `
{
  "text": "Monde",
  "url": "/afrique/topics/cvqxn21vx11t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 4`] = `
{
  "text": "Santé",
  "url": "/afrique/topics/c06gq9jxz3rt",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 5`] = `
{
  "text": "Bien-être",
  "url": "/afrique/topics/c0vmyy90q8zt",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 6`] = `
{
  "text": "Science et technologie",
  "url": "/afrique/topics/crezq2zk0q4t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 7`] = `
{
  "text": "Economie",
  "url": "/afrique/topics/cnq687nr9v1t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 8`] = `
{
  "text": "Culture",
  "url": "/afrique/topics/cnq687nrrw8t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 9`] = `
{
  "text": "Vidéos",
  "url": "/afrique/topics/cz4vn9gyd6rt",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 10`] = `
{
  "text": "Nos émissions",
  "url": "/afrique/topics/c88nzggm8gxt",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 11`] = `
{
  "text": "Ecoutez en direct",
  "url": "/afrique/bbc_afrique_radio/liveradio",
}
`;

exports[`Canonical Feature Index page Main heading should match text 1`] = `"Tout savoir sur la CAN 2019"`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/afrique/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Feature Index page SEO Canonical link 1`] = `"http://localhost:7080/afrique/48465371"`;

exports[`Canonical Feature Index page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Feature Index page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Feature Index page SEO Heading level 1 1`] = `"Tout savoir sur la CAN 2019"`;

exports[`Canonical Feature Index page SEO Lang attribute 1`] = `"fr"`;

exports[`Canonical Feature Index page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fr",
        "name": "French",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/afrique/48465371",
        "@type": "WebPage",
        "name": "Tout savoir sur la CAN 2019",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
          "width": 1024,
        },
        "name": "BBC News Afrique",
        "publishingPrinciples": "https://www.bbc.com/afrique/institutionelles-49283281",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
      "url": "http://localhost:7080/afrique/48465371",
    },
  ],
}
`;

exports[`Canonical Feature Index page SEO OG description 1`] = `"La Coupe d'Afrique des nations, compétition de football la plus importante dans le continent, se joue en Egypte du 21 juin au 19 juillet 2019."`;

exports[`Canonical Feature Index page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`Canonical Feature Index page SEO OG image alt 1`] = `"BBC News Afrique"`;

exports[`Canonical Feature Index page SEO OG locale 1`] = `"fr"`;

exports[`Canonical Feature Index page SEO OG site name 1`] = `"BBC News Afrique"`;

exports[`Canonical Feature Index page SEO OG title 1`] = `"Tout savoir sur la CAN 2019 - BBC News Afrique"`;

exports[`Canonical Feature Index page SEO OG type 1`] = `"website"`;

exports[`Canonical Feature Index page SEO OG url 1`] = `"http://localhost:7080/afrique/48465371"`;

exports[`Canonical Feature Index page SEO Page title 1`] = `"Tout savoir sur la CAN 2019 - BBC News Afrique"`;

exports[`Canonical Feature Index page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Feature Index page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Feature Index page SEO Twitter creator 1`] = `"@bbcafrique"`;

exports[`Canonical Feature Index page SEO Twitter description 1`] = `"La Coupe d'Afrique des nations, compétition de football la plus importante dans le continent, se joue en Egypte du 21 juin au 19 juillet 2019."`;

exports[`Canonical Feature Index page SEO Twitter image alt 1`] = `"BBC News Afrique"`;

exports[`Canonical Feature Index page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`Canonical Feature Index page SEO Twitter site 1`] = `"@bbcafrique"`;

exports[`Canonical Feature Index page SEO Twitter title 1`] = `"Tout savoir sur la CAN 2019 - BBC News Afrique"`;

exports[`Canonical Feature Index page Sections should match headline text 1`] = `"À la une"`;

exports[`Canonical Feature Index page Story Promo Headline should match text 1`] = `"CAN 2019 : le Sénégal qualifié pour les huitièmes de finale"`;

exports[`Canonical Feature Index page Story Promo Image should match image 1`] = `
<img
  alt="CAN 2019 : le Sénégal en huitième de finale"
  class="bbc-139onq"
  height="549"
  sizes="(min-width: 1100px) 496px, (min-width: 600px) 45.83vw, 94.29vw"
  src="https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/70/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 70w, https://ichef.bbci.co.uk/ace/ws/95/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 95w, https://ichef.bbci.co.uk/ace/ws/144/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 144w, https://ichef.bbci.co.uk/ace/ws/183/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 183w, https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 320w, https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/4826/production/_107707481_equipesenegal.jpg.webp 660w"
  style="aspect-ratio:976 / 549"
  width="976"
/>
`;

exports[`Canonical Feature Index page Story Promo Link should match text and url 1`] = `
{
  "text": "CAN 2019 : le Sénégal qualifié pour les huitièmes de finale",
  "url": "/afrique/sports-48835428",
}
`;

exports[`Canonical Feature Index page Story Promo Timestamp should match text and date 1`] = `
{
  "date": "2019-07-02",
  "text": "2 juillet 2019",
}
`;
